# shogi-sfml

./: .gitignore  CMakeLists.txt  LICENSE
core/: Board.cpp  Game.cpp  Move.cpp  MoveGenerator.cpp  Piece.cpp  Renderer.cpp
core/include/core/: Board.hpp  Config.hpp  Game.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  Renderer.hpp  Types.hpp
src/: main.cpp
